Add initial Web site file

--- a/index.html
+++ b/index.html
@@ -3,81 +3,65 @@
 
 <head>
   <meta charset="utf-8">
-  <title>♥vidhya shankar personal site</title>
+  <title>Vidhya Shankar</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat:wght@500&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/circle-cropped.png" alt="Vidhya shankar profile photo"></td>
-      <td>
-        <h1>vidhya shankar goel</h1>
-        <p><em>Project Engineer in <strong><a href="https://www.wipro.com/">Wipro Limited</a></strong></em></p>
-        <p>I am an Web Developer. I love coding and I am pretty good at it.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>10th and 12th from <a href="http://sdvmschool.org/">S.D.V.M</a></li>
-    <li><a href="https://www.msit.in/">BCA from Maharaja Surajmal</a></li>
-    <li><a href="https://www.bits-pilani.ac.in/">Mtech from BITS Pilani</a></li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table border="1">
-    <thead>
-    <tr>
-      <th>Dates</th>
-      <th>Work Experience</th>
-    </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2013-2015</td>
-        <td>Concentrix as Associate</td>
-      </tr>
-      <tr>
-        <td>2015-2021</td>
-        <td>Project Engineer at Wipro Limited</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table  border="2">
-    <thead>
-      <tr>
-        <th>Technology</th>
-        <th>Rating</th>
-      </tr>
-      <tbody>
-        <tr>
-          <td>Ab-Initio</td>
-          <td>⋆⋆⋆⋆</td>
-        </tr>
-        <tr>
-          <td>HTML</td>
-          <td>⋆⋆⋆</td>
-        </tr>
-        <tr>
-          <td>Qlik Sense</td>
-          <td>⋆⋆⋆⋆⋆</td>
-        </tr>
-        <tr>
-          <td>Tableau</td>
-          <td>⋆⋆⋆⋆</td>
-        </tr>
-        <tr>
-          <td>SQL-PlSQL</td>
-          <td>⋆⋆⋆⋆</td>
-        </tr>
-      </tbody>
-    </thead>
-  </table>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="Contact Details.html">Contact Details</a>
+  <div class="container">
+
+  </div>
+  <div class="first">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Vidhya Shankar</h1>
+    <h2>a <span class="pro">pro</span>gramer</h2>
+    <img class="first-img" src="images/cloud.png" alt="cloud-img">
+    <img class="second-img" src="images/mountain.png" alt="mountain-img">
+  </div>
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img height="200px"src="images/vidhya1.png" alt="vidhya shankar personal image">
+      <h2>Hello.</h2>
+      <p class="m21">I am an Web Developer.
+         I am working for Wipro Technologies.
+         I ❤ learning new things </p>
+    </div>
+    <hr class="hr1">
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="web1" src="images/web-programming.png" alt="">
+        <h3>Web developer</h3>
+        <p>My Key role in Wipro is to handle Web based Devepment activity for my client GTAA.</p>
+      </div>
+      <div class="skill-row">
+        <img class="DBA2" src="images/database.png" alt="">
+        <h3>DBA</h3>
+        <p>I work as a dba as well in Wipro. DBA is my secondary role which adds more benefit to my area of learning.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you love Web Devepment.</h3>
+      <p class="contact_message">We can learn different type and way to implement front end Devepment.</p>
+      <a class="btn" href="mailto:vidhyashankargoel1996@email.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link1" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link2" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link3" href="https://www.appbrewery.co/">Website</a>
+    <p class="bc1">©2021  Vidhya Shankar Goel @Wipro Technologies</p>
+  </div>
+
 </body>
 
 </html>
